# vaccumRobot

./: .gitignore  README.md  evaluator.py  main.py  metrics.py  pyproject.toml  reference.py  requirements.txt  test_model.py  train_sync.py  trainer.py  training_dashboard.py
agent/: README.md  __init__.py  agent.py  algorithm.py  base.py  checkpoint.py  definition.py  model.py  preprocessor.py  registry.py
agent/a2c/: __init__.py  a2c_metrics.py  algorithm.py
agent/common/: __init__.py  (+2 more)
config/: .editor_autosave.npy  README.md  map_2.py  map_3.py  map_4.py  map_editor.py  map_loader.py  simple_map_config.py  test_config.toml  test_config_quick.toml  train_config.toml
configs/: README.md  __init__.py  map_editor.py  map_loader.py  runtime_config.py  test_config.toml  train_config.toml
core/: __init__.py  evaluator.py  evaluator_runner.py  paths.py  trainer.py  trainer_runner.py  types.py
env/: __init__.py  factory.py  grid_world.py  trajectory_recorder.py
scripts/: eval.py  export_maps_to_json.py  map_editor.py  plot_maps.py  train.py  validate_maps_json.py
services/: checkpoint_service.py  dashboard_service.py  metrics_service.py
test/: test_animation_demo.py  test_simple_map.py
tests/: __init__.py  test_algorithm_base.py  test_animation_demo.py  test_batch.py  test_checkpoint.py  test_checkpoint_service.py  test_config_dispatch.py  test_grpo_algorithm.py  test_map_loader.py  test_paths.py  test_ppo_kl_algorithm.py  test_registry.py  test_runner_assembly.py  test_runner_smoke.py  test_runtime_config.py  test_simple_map.py  test_trpo_algorithm.py
(+65 files in other folders)
