[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vacuumrobot"
version = "0.1.0"
description = "PPO-based reinforcement learning framework for robot vacuum cleaning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "gymnasium>=1.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "configs*", "core*", "env*", "services*"]
